# Fast_First_NB

./: pyproject.toml
src/fast_first/: app.py
tests/: test_app.py
